--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     font-family: sans-serif;
   }
 
+  /* Header */
 header {
     display: flex;
     flex-direction: row;
@@ -26,22 +27,19 @@ header {
     padding: 1em;
 }
 
-/* header a {
-    text-decoration: none;
-    color: var(--light);
+.highscore-redirect:hover{
+    cursor: pointer;
+    font-weight: bolder;
 }
 
-header a:visited {
-    text-decoration: none;
-    color: var(--light);
-} */
-
+/* Main body */
 main {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+/* Welcome screen */
 #welcome {
     width: 100%;
     height: 20em;
@@ -51,9 +49,6 @@ main {
     align-items: center;
 }
 
-#question {
-    padding: 1em;
-}
 
 #welcome p {
     padding: 1em;
@@ -70,10 +65,15 @@ main {
     font-size: 1.2em;
 }
 
+/* Quiz screen */
 #quiz {
     display: none;
     flex-direction: column;
     width: 90%;
+}
+
+#question {
+    padding: 1em;
 }
 
 .answer {
@@ -97,6 +97,17 @@ main {
     color: var(--light);
 }
 
+.correct {
+    background-color: green;
+    padding: .5em;
+}
+
+.wrong {
+    background-color:firebrick;
+    padding: .5em;
+}
+
+/* Quiz Over screen */
 #quiz-end{
     display: none;
     padding: 1em;
@@ -106,10 +117,6 @@ main {
 #quiz-result, #result-prompt, #score {
     padding: .5em;
     align-self: center;
-}
-
-#score-page {
-    display: none;
 }
 
 #submit-score {
@@ -134,6 +141,12 @@ main {
     font-size: 1.2em; 
 }
 
+/* HighScore Page */
+#score-page {
+    display: none;
+}
+
+
 #clear-scores {
     padding: 5px;
     background-color: turquoise;
@@ -148,8 +161,6 @@ main {
 #score-list {
     padding: 1em;
     color: var(--dark);
-    /* list-style: none;
-    counter-reset: item; */
     font-weight: bold;
 }
 
@@ -159,16 +170,6 @@ main {
 }
 
 #score-list li:nth-child(odd) {
-    
     background-color: whitesmoke;
 }
 
-.correct {
-    background-color: green;
-    padding: .5em;
-}
-
-.wrong {
-    background-color:firebrick;
-    padding: .5em;
-}
